--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "react": "^19.0.0",
+    "react-data-grid": "^7.0.0-beta.48",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-spreadsheet": "^0.9.5",
-    "scheduler": "^0.25.0"
+    "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
