--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-data-grid": "^7.0.0-beta.48",
     "react-dom": "^19.0.0",
+    "react-drag-drop-files": "^2.4.0",
     "react-router-dom": "^7.2.0",
     "react-spreadsheet": "^0.9.5",
     "tailwindcss": "^4.0.7"
